<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Why Should We join CEG..??"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m8"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m9"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m10"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m11"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m12"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m13"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m14"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m15"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m16"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m17"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m18"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m19"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m20"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m21"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m22"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m23"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m24"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>