<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About CEG"
        android:textSize="35sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/textView"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m1"
                android:textSize="15sp"
                android:textColor="#000"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m2"
                android:textSize="15sp"
                android:textColor="#000"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m3"
                android:textSize="15sp"
                android:textColor="#000"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m4"
                android:textSize="15sp"
                android:textColor="#000"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:textSize="15sp"
                android:textColor="#000"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m6"
                android:textSize="15sp"
                android:textColor="#000"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m7"
                android:textSize="15sp"
                android:textColor="#000"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
